--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "zod": "^3.25.64"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
