--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-haptics": "~14.1.3",
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
+    "expo-location": "^18.1.5",
     "expo-notifications": "~0.30.1",
     "expo-router": "~5.0.2",
     "expo-splash-screen": "~0.30.6",
@@ -34,6 +35,7 @@
     "expo-web-browser": "~14.1.5",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.1",
@@ -45,9 +47,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
-    "zod": "^3.25.64",
     "tailwindcss": "^3.4.17",
-    "prettier-plugin-tailwindcss": "^0.5.11"
+    "zod": "^3.25.64"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
