--- a/app.json
+++ b/app.json
@@ -45,15 +45,7 @@
     "plugins": [
       "expo-router",
       "expo-font",
-      "expo-web-browser",
-      [
-        "@daily-co/config-plugin-rn-daily-js",
-        {
-          "enableCamera": true,
-          "enableMicrophone": true,
-          "enableScreenShare": true
-        }
-      ]
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
