--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.50.0",
+    "eas-cli": "^16.13.1",
     "expo": "^53.0.0",
     "expo-blur": "~14.1.3",
     "expo-camera": "~16.1.5",
     "expo-constants": "~17.1.3",
+    "expo-dev-client": "~5.2.1",
     "expo-font": "~13.2.2",
     "expo-haptics": "~14.1.3",
     "expo-linear-gradient": "~14.1.3",
@@ -57,8 +59,7 @@
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
     "zod": "^3.25.64",
-    "zustand": "^5.0.5",
-    "expo-dev-client": "~5.2.1"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
