--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-background-timer": "^2.4.1",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-health": "^1.19.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
