--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-dev-client": "~5.2.1",
     "expo-font": "~13.2.2",
     "expo-haptics": "~14.1.3",
+    "expo-image-picker": "~16.1.0",
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~7.1.3",
     "expo-location": "^18.1.5",
