--- a/package.json
+++ b/package.json
@@ -19,37 +19,37 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.1.0",
     "@lucide/lab": "^0.1.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/drawer": "^7.5.2",
+    "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.50.0",
     "eas-cli": "^16.13.1",
-    "expo": "^53.0.0",
-    "expo-blur": "~14.1.3",
-    "expo-camera": "~16.1.5",
+    "expo": "53.0.13",
+    "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.9",
     "expo-constants": "~17.1.3",
-    "expo-dev-client": "~5.2.1",
-    "expo-font": "~13.2.2",
-    "expo-haptics": "~14.1.3",
+    "expo-dev-client": "~5.2.2",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
     "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.3",
-    "expo-linking": "~7.1.3",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.5",
     "expo-location": "^18.1.5",
-    "expo-notifications": "~0.30.1",
-    "expo-router": "~5.0.2",
-    "expo-splash-screen": "~0.30.6",
-    "expo-status-bar": "~2.2.2",
-    "expo-symbols": "~0.4.3",
-    "expo-system-ui": "~5.0.5",
-    "expo-web-browser": "~14.1.5",
+    "expo-notifications": "~0.31.3",
+    "expo-router": "~5.1.1",
+    "expo-splash-screen": "~0.30.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.9",
+    "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.1",
+    "react-native": "0.79.4",
     "react-native-background-timer": "^2.4.1",
     "react-native-fbsdk-next": "^13.4.1",
     "react-native-gesture-handler": "~2.24.0",
@@ -57,7 +57,7 @@
     "react-native-health": "^1.19.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
