--- a/app.json
+++ b/app.json
@@ -45,7 +45,17 @@
     "plugins": [
       "expo-router",
       "expo-font",
-      "expo-web-browser"
+      "expo-web-browser", 
+      [
+        "@daily-co/config-plugin-rn-daily-js",
+        {
+          "enableCamera": true,
+          "enableMicrophone": true,
+          "enableScreenShare": true
+        }
+      ]
+
+
     ],
     "experiments": {
       "typedRoutes": true
