--- a/app.json
+++ b/app.json
@@ -45,7 +45,7 @@
     "plugins": [
       "expo-router",
       "expo-font",
-      "expo-web-browser", 
+      "expo-web-browser",
       [
         "@daily-co/config-plugin-rn-daily-js",
         {
@@ -54,8 +54,6 @@
           "enableScreenShare": true
         }
       ]
-
-
     ],
     "experiments": {
       "typedRoutes": true
@@ -63,8 +61,9 @@
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "077490fc-deb1-4bfd-bda8-c8f3c9cee386"
+        "projectId": "8f8069ee-a261-4cc1-9ae5-0cf710d5ebe6"
       }
-    }
+    },
+    "owner": "flinnbella"
   }
 }
