Fix Google Sign-In Native Module Error for Mobile Devices

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,15 @@ EXPO_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 EXPO_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
 # Google OAuth Configuration
+# Get this from Google Cloud Console > APIs & Services > Credentials
 EXPO_PUBLIC_GOOGLE_OAUTH_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 
-# Facebook OAuth Configuration
+# Facebook OAuth Configuration  
+# Get this from Facebook Developers Console
 EXPO_PUBLIC_FACEBOOK_APP_ID=your-facebook-app-id
 
 # Resend Email API
+# Get this from resend.com
 RESEND_API_KEY=re_your-resend-api-key
 
 # Google Places API (for address autocomplete)
