--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:web": "expo export --platform web",
     "lint": "expo lint",
     "android": "expo run:android",
-    "ios": "expo run:ios"
+    "ios": "expo run:ios",
+    "prebuild": "expo prebuild --clean"
   },
   "dependencies": {
     "@config-plugins/react-native-webrtc": "^12.0.0",
