--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
     <meta-data android:name="expo.modules.updates.EXPO_UPDATES_CHECK_ON_LAUNCH" android:value="ALWAYS"/>
     <meta-data android:name="expo.modules.updates.EXPO_UPDATES_LAUNCH_WAIT_MS" android:value="0"/>
     <service android:name="com.daily.reactlibrary.DailyOngoingMeetingForegroundService" android:exported="false" android:foregroundServiceType="camera|microphone"/>
+    <service android:name="com.daily.reactlibrary.DailyOngoingMeetingForegroundService" android:exported="false" android:foregroundServiceType="camera|microphone"/>
     <activity android:name=".MainActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|uiMode" android:launchMode="singleTask" android:windowSoftInputMode="adjustResize" android:theme="@style/Theme.App.SplashScreen" android:exported="true" android:screenOrientation="portrait">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
@@ -45,6 +46,7 @@
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="symsense"/>
         <data android:scheme="exp+symsense-health-app"/>
+        <data android:scheme="exp+bolt-expo-nativewind"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.FacebookActivity" android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation" android:label="@string/app_name"/>
