--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.50.0",
     "eas-cli": "^16.13.1",
-    "expo": "53.0.13",
+    "expo": "^53.0.13",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.9",
     "expo-constants": "~17.1.3",
