--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.20.3",
     "zod": "^3.25.64",
     "zustand": "^5.0.5"
   },
