--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@lucide/lab": "^0.1.2",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-google-signin/google-signin": "^15.0.0",
+    "@react-native/gradle-plugin": "^0.75.1",
     "@react-native/virtualized-lists": "^0.80.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.3.9",
@@ -52,7 +53,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.4",
+    "react-native": "^0.79.4",
     "react-native-background-timer": "^2.4.1",
     "react-native-fbsdk-next": "^13.4.1",
     "react-native-gesture-handler": "~2.24.0",
