--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,11 +147,21 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
-    implementation '.com.github.jiangdongguo.AndroidUSBCamera:libausbc:3.3.3'
+    implementation files('libs/libausbc-3.3.3.aar')
+    implementation files('libs/libuvc-3.3.3.aar')
+    implementation files('libs/libuvccommon-3.3.3.aar')
+    implementation files('libs/libnative-3.3.3.aar')
+    implementation files('libs/libutils-3.3.3.aar')
 
     def isGifEnabled = (findProperty('expo.gif.enabled') ?: "") == "true";
     def isWebpEnabled = (findProperty('expo.webp.enabled') ?: "") == "true";
