--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "expo lint",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "prebuild": "expo prebuild --clean"
+    "prebuild": "expo prebuild --clean",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@config-plugins/react-native-webrtc": "^12.0.0",
@@ -50,6 +51,7 @@
     "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
+    "patch-package": "^8.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
