--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,7 +34,7 @@ allprojects {
     mavenCentral()
     maven { url 'https://www.jitpack.io' }
     flatDir {
-        dirs 'libs'
+        dirs project(':app').file('libs') //
     }
   }
 }
