--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,6 +94,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0.0"
+        missingDimensionStrategy 'react-native-camera', 'general'
     }
     signingConfigs {
         debug {
@@ -157,11 +158,11 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
-    implementation files('libs/libausbc-3.3.3.aar')
-    implementation files('libs/libuvc-3.3.3.aar')
-    implementation files('libs/libuvccommon-3.3.3.aar')
-    implementation files('libs/libnative-3.3.3.aar')
-    implementation files('libs/libutils-3.3.3.aar')
+    implementation (name: 'libausbc-3.3.3', ext: 'aar')
+    implementation (name: 'libuvc-3.3.3', ext: 'aar')
+    implementation (name: 'libuvccommon-3.3.3', ext: 'aar')
+    implementation (name: 'libnative-3.3.3', ext: 'aar')
+    implementation (name: 'libutils-3.3.3', ext: 'aar')
 
     def isGifEnabled = (findProperty('expo.gif.enabled') ?: "") == "true";
     def isWebpEnabled = (findProperty('expo.webp.enabled') ?: "") == "true";
