--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "@config-plugins/react-native-webrtc": "^12.0.0",
     "@daily-co/config-plugin-rn-daily-js": "^0.0.9",
     "@daily-co/react-native-daily-js": "^0.77.0",
-    "@daily-co/react-native-webrtc": "118.0.3-daily.2",
+    "@daily-co/react-native-webrtc": "118.0.3-daily.1",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/config-plugins": "~10.0.0",
     "@expo/prebuild-config": "~9.0.0",
     "@expo/vector-icons": "^14.1.0",
     "@lucide/lab": "^0.1.2",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-native/gradle-plugin": "^0.75.1",
     "@react-native/virtualized-lists": "^0.80.0",
@@ -43,6 +43,7 @@
     "expo-linking": "~7.1.5",
     "expo-location": "^18.1.5",
     "expo-notifications": "~0.31.3",
+    "expo-random": "^13.6.0",
     "expo-router": "~5.1.1",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
