--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -31,7 +31,7 @@ extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
 }
 
 include ':app'
-apply from: new File(["node", "--print", "require.resolve('expo/scripts/autolinking.android.js')"].execute(null, rootDir).text.trim())
+apply from: "../node_modules/expo/scripts/autolinking.gradle"
 expoAutolinking.useExpoModules()
 
 rootProject.name = 'SymSense'
