--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.50.0",
-    "expo": "^53.0.13",
+    "expo": "53.0.15",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.9",
     "expo-constants": "~17.1.3",
