--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,8 +4,11 @@ buildscript {
 
   ext{
     buildToolsVersion = "35.0.0"
-    compileSdkVersion = 35
-    targetSdkVersion = 35
+    compileSdkVersion = 34
+    targetSdkVersion = 34
+    mindSdkVersion = 24
+    expoProvidesDefaultConfig = false
+    ndkVersion = "29.0.13599879"
   }
   repositories {
     google()
