--- a/eas.json
+++ b/eas.json
@@ -6,9 +6,21 @@
   },
     "build": {
       "development": {
+        "developmentClient": true,
+        "distribution": "internal",
         "ios": {
           "simulator": true
         }
-      }
+      },
+    "preview": {
+      "distribution": "internal"
+    },
+    "production": {
+      "autoIncrement": true
     }
+  },
+  
+  "submit": {
+    "production": {}
+  }
 }
