--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,7 @@
-# Supabase Configuration
-EXPO_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-EXPO_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
-
-# Google OAuth Configuration
-# Get this from Google Cloud Console > APIs & Services > Credentials
-EXPO_PUBLIC_GOOGLE_OAUTH_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
-
-# Facebook OAuth Configuration  
-# Get this from Facebook Developers Console
-EXPO_PUBLIC_FACEBOOK_APP_ID=your-facebook-app-id
-
-# Resend Email API
-# Get this from resend.com
-RESEND_API_KEY=re_your-resend-api-key
-
-# Google Places API (for address autocomplete)
-EXPO_PUBLIC_GOOGLE_PLACES_API_KEY=your-google-places-api-key
-
-# AI Webhook URL
-EXPO_PUBLIC_AI_WEBHOOK_URL=https://your-webhook-url.com
-
-# Terra API (for health data)
-EXPO_PUBLIC_TERRA_API_KEY=your-terra-api-key
-EXPO_PUBLIC_TERRA_DEV_ID=your-terra-dev-id
+   EXPO_PUBLIC_SUPABASE_URL=https://qqgjovhgllfrmxwppvkt.supabase.co
+   EXPO_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_cQh10PGS4c8m30D0BYOkiQ_ca9g39ga
+   EXPO_PUBLIC_GOOGLE_OAUTH_CLIENT_ID=your-google-client-id
+   EXPO_PUBLIC_FACEBOOK_APP_ID=your-facebook-app-id
+   RESEND_API_KEY=
+   EXPO_PUBLIC_GOOGLE_PLACES_API_KEY=
+   EXPO_PUBLIC_AI_WEBHOOK_URL=
